--- a/v1/web/frontend/heweb-app/src/app/patient-profile/patient-profile.component.html
+++ b/v1/web/frontend/heweb-app/src/app/patient-profile/patient-profile.component.html
@@ -1,8 +1,10 @@
 <div *ngIf="selectedPatient; else noSelection">
-  <h2>{{ selectedPatient.name }}</h2>
-  <p>Email: {{ selectedPatient.email }}</p>
-  <p>Phone: {{ selectedPatient.phone }}</p>
-  <!-- Display other patient information as needed -->
+  <h2>{{ selectedPatient.Name }}</h2>
+  <p>Email: {{ selectedPatient.Email }}</p>
+  <p>Phone: {{ selectedPatient.Phone }}</p>
+  <p>Birthday: {{ selectedPatient.Birthday }}</p>
+  <p>Messages: {{ selectedPatient.Messages }}</p>
+  <p>Medication: {{ selectedPatient.Medication }}</p>
 </div>
 
 <ng-template #noSelection>
