--- a/v1/web/frontend/heweb-app/src/app/patient-selection/patient-selection.component.html
+++ b/v1/web/frontend/heweb-app/src/app/patient-selection/patient-selection.component.html
@@ -1,7 +1,9 @@
 <!-- src/app/patient-selection/patient-selection.component.html -->
+
+
 <select (change)="onPatientSelect($event)">
   <option value="" disabled selected>Select a patient</option>
-  <option *ngFor="let patient of patients" [value]="patient.id">
-    {{ patient.name }}
+  <option *ngFor="let patient of patients" [value]="patient.ID">
+    {{ patient.Name }}
   </option>
 </select>
