medication-entry submit doesn't work

--- a/v1/web/frontend/heweb-app/src/app/app.component.html
+++ b/v1/web/frontend/heweb-app/src/app/app.component.html
@@ -1,7 +1,9 @@
 <main class="main">
   <div class="container">
+    <h1>請選擇病人</h1> 
     <app-patient-selection></app-patient-selection>
     <app-patient-profile></app-patient-profile>
+    <app-medication-entry></app-medication-entry>
   </div>
 </main>
 
