medication entry works, can update medications in db

--- a/v1/web/frontend/heweb-app/src/app/patient-profile/patient-profile.component.html
+++ b/v1/web/frontend/heweb-app/src/app/patient-profile/patient-profile.component.html
@@ -11,7 +11,7 @@
       </li>
     </ul>
   </div>
-  <!-- <p>Medication: {{ selectedPatient.Medication }}</p> -->
+  <p>Medication: {{ selectedPatient.Medication }}</p>
   <h3>需服藥品</h3>
 </div>
 
