--- a/v1/web/frontend/heweb-app/src/app/patient-selection/patient-selection.component.html
+++ b/v1/web/frontend/heweb-app/src/app/patient-selection/patient-selection.component.html
@@ -2,7 +2,7 @@
 
 
 <select (change)="onPatientSelect($event)">
-  <option value="" disabled selected>Select a patient</option>
+  <option value="" disabled selected>請選擇病人</option>
   <option *ngFor="let patient of patients" [value]="patient.ID">
     {{ patient.Name }}
   </option>
