--- a/v1/web/frontend/heweb-app/src/app/patient-selection/patient-selection.component.html
+++ b/v1/web/frontend/heweb-app/src/app/patient-selection/patient-selection.component.html
@@ -1,9 +1,7 @@
 <!-- src/app/patient-selection/patient-selection.component.html -->
-
-
 <select (change)="onPatientSelect($event)">
   <option value="" disabled selected>請選擇病人</option>
-  <option *ngFor="let patient of patients" [value]="patient.ID">
-    {{ patient.Name }}
+  <option *ngFor="let patient of patients" [value]="patient._id">
+    {{ patient.name }}
   </option>
 </select>
