feature: better UI and edit-mode for patient's data

--- a/v1/web/frontend/heweb-app/src/app/app.component.html
+++ b/v1/web/frontend/heweb-app/src/app/app.component.html
@@ -1,10 +1,9 @@
-<main class="main">
-  <div class="container">
-    <h1>請選擇病人</h1> 
+<main class="main-container">
+  <div class="left-panel">
     <app-patient-selection></app-patient-selection>
     <app-patient-profile></app-patient-profile>
+  </div>
+  <div class="right-panel">
     <app-medication-entry></app-medication-entry>
   </div>
 </main>
-
-<router-outlet></router-outlet>
