--- a/v1/web/frontend/heweb-app/src/app/patient-selection/patient-selection.component.html
+++ b/v1/web/frontend/heweb-app/src/app/patient-selection/patient-selection.component.html
@@ -1,5 +1,6 @@
 <!-- src/app/patient-selection/patient-selection.component.html -->
 <select (change)="onPatientSelect($event)">
+  <h1>請選擇病人</h1>
   <option value="" disabled selected>請選擇病人</option>
   <option *ngFor="let patient of patients" [value]="patient._id">
     {{ patient.name }}
